--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - main
   schedule:
-    - cron: '00 00 * * *'  # 北京时间 00:00 (UTC+8)，对应UTC时间 00:00
+    - cron: '15 00 * * *'  # 北京时间 00:00 (UTC+8)，对应UTC时间 00:00
   workflow_dispatch:
 
 permissions:
@@ -46,6 +46,8 @@ jobs:
           PASS4: ${{ secrets.PASS4 }}
           USER5: ${{ secrets.USER5 }}
           PASS5: ${{ secrets.PASS5 }}
+          USER6: ${{ secrets.USER5 }}
+          PASS6: ${{ secrets.PASS5 }}
           
           # Cookie配置
           NS_COOKIE: ${{ vars.NS_COOKIE || secrets.NS_COOKIE }}
